# lost-signal

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  bacon.toml  map.txt  run-wasm-client.sh
.cargo/: config.toml
.github/workflows/: docker-image.yml  rust.yml
crates/client/: Cargo.toml
crates/client-term/: Cargo.toml
crates/client-term/src/: crossterm_adapter.rs  game.rs  main.rs  tui.rs  udp_client.rs  ws_client.rs
crates/client-wasm/: Cargo.toml  Trunk.toml  index.html
crates/client-wasm/src/: main.rs  ratzilla_adapter.rs  ws.rs
crates/client/src/: adapter.rs  game.rs  lib.rs  logs.rs  sense.rs  theme.rs  tui.rs  tui_adapter.rs  world.rs
crates/client/src/tui/: app.rs  component.rs  mod.rs  state.rs  theme.rs
crates/client/src/tui/pages/: game.rs  menu.rs  mod.rs
crates/client/src/tui/utils/: layout.rs  mod.rs
crates/client/src/tui/widgets/: block_wrap.rs  help.rs  logs.rs  mod.rs  senses.rs  timeline.rs
crates/core/: Cargo.toml
crates/core/src/: events.rs  fov.rs  leaderboard.rs  lib.rs  network.rs  sense.rs  types.rs
crates/server/: Cargo.toml
crates/server/src/: action.rs  command.rs  dispatch.rs  events.rs  foes.rs  fov.rs  game.rs  main.rs  robot.rs  sense.rs  sense_bounds.rs  services.rs  stage.rs  states.rs  tiled.rs  tui.rs  udp_server.rs  world.rs  ws_server.rs
deploy/: scaleway-cloud-init.yml
docker/: Dockerfile  build.sh  init-ssl.sh  nginx.conf  run.sh  start.sh  supervisord.conf
maps/: arena.tmx  arena_big.tmx  arena_corridor.tmx  battlefield_1.tmx  battlefield_2.tmx  battlefield_3.tmx  battlefield_4.tmx  battlefield_end.tmx  hub.tmx  lvl1.tmx  lvl1.txt  lvl2.tmx  lvl2.txt  lvl3.tmx  lvl_1.tmx  lvl_2.tmx  lvl_3.tmx  template.tmx  timelab_basics.tmx  timelab_blind_kill.tmx  timelab_deathbound.tmx  timelab_infinity.tmx  timelab_pinning.tmx  tuto_end.tmx  tuto_hearing.tmx  tuto_hearsight.tmx  tuto_self.tmx  tuto_sight.tmx  tuto_touch.tmx
maps/tileset/: README.md  editor.tsx  generate_char_tile.sh
src/: command.rs  entity.rs  game.rs  lib.rs  main.rs  robot.rs  sense.rs  server.rs  tui.rs  world.rs
src/client/: client.rs  game.rs  main.rs  tui.rs  udp_client.rs  world.rs  ws_client.rs
src/common/: action.rs  command.rs  mod.rs  network.rs  sense.rs  types.rs
src/server/: command.rs  game.rs  main.rs  robot.rs  sense.rs  server.rs  states.rs  tui.rs  udp_server.rs  world.rs  ws_server.rs
