[package]
name = "lost-signal"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29"
rand = "0.9"
ratatui = "0.29"
tui-logger = "0.17"
log = "0.4"
serde = "1.0.228"
serde_json = "1.0.145"
serde_derive = "1.0.228"

[lints.clippy]
all = "warn"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
