[workspace]
resolver = "2"
members = ["crates/server", "crates/client", "crates/client-term", "crates/client-wasm", "crates/core"]

[workspace.package]
name = "lost-signal"
version = "0.1.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/vcque/lost-signal"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
bincode = "1"
log = "0.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Network dependencies
tungstenite = "0.28"

# Terminal UI dependencies
crossterm = "0.29"
ratatui = "0.29"
tui-logger = "0.17"

# WASM dependencies
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = "0.1"
js-sys = "0.3"

[workspace.lints.clippy]
all = "warn"
