[package]
name = "losig-term"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
losig-core = { path = "../core" }
anyhow.workspace = true
bincode.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
tungstenite.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tui-logger.workspace = true

[lints]
workspace = true

