[package]
name = "losig-term"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
losig-core = { path = "../core" }
losig-client = { path = "../client" }
anyhow.workspace = true
bincode.workspace = true
log.workspace = true
serde.workspace = true
tungstenite.workspace = true
crossterm.workspace = true
ratatui = { version = "0.29" }
tui-logger.workspace = true

[lints]
workspace = true

