[package]
name = "losig-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
losig-core = { path = "../core" }
anyhow.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys.workspace = true
console_error_panic_hook.workspace = true

[lints]
workspace = true
