[package]
name = "losig-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
color-eyre = "0.6.5"
console_error_panic_hook.workspace = true
js-sys.workspace = true
losig-core = { path = "../core" }
ratatui = { version = "0.29", default-features = false }
ratzilla = "0.2.0"
serde.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
] }

[lints]
workspace = true

[[bin]]
name = "wasm"
path = "src/main.rs"
