[package]
name = "losig-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
color-eyre = "0.6.5"
console_error_panic_hook.workspace = true
js-sys.workspace = true
losig-core = { path = "../core" }
losig-client = { path = "../client" }
ratatui.workspace = true
ratzilla = "0.2.0"
serde.workspace = true
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "MessageEvent",
  "WebSocket",
  "Url",
  "UrlSearchParams",
	"Window",
	"Crypto",
	"History",
] }
console_log = "1.0.0"
log.workspace = true
gloo-timers = "0.3.0"

[lints]
workspace = true

[[bin]]
name = "wasm"
path = "src/main.rs"
