[package]
name = "losig-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bounded-integer.workspace = true
losig-core = { path = "../core" }
ratatui.workspace = true
log.workspace = true
palette.workspace = true
itertools.workspace = true
web-time = "1.1.0"

[lints]
workspace = true
