[package]
name = "losig-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
