[package]
name = "losig-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
losig-core = { path = "../core" }
anyhow.workspace = true
bincode.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
tungstenite.workspace = true
crossterm.workspace = true
ratatui = { version = "0.29" }
tui-logger.workspace = true
fraction = "0.15.3"
tiled = "0.15.0"
bounded-integer.workspace = true
grid.workspace = true

[lints]
workspace = true
